# MLOps-Platform

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
api/: Dockerfile  main.py  metrics.py  model_loader.py  requirements.txt  schema.py
batch/: Dockerfile  api.py  core.py  flow.py  main.py  requirements.txt
dashboard/: Dockerfile  app.py  drift_tab.py  requirements.txt
docs/: BATCH_DEPLOYMENT.md  CICD.md  DOCKER_FOR_ML.md  Evidently.md  FASTAPI.md  MLFLOW_QUICKSTART.md  MLFLOW_REGISTRY.md  MLFLOW_SERVER.md  MLOPS_LIFECYCLE.md  MONITORING_CONCEPTS.md  PREFECT_QUICKSTART.md  SSL.md  SYSTEM_INTEGRATION.md  ngnix.md
monitoring/grafana/dashboards/: dashboard_v1_operational.json  dashboard_v2_business.json  dashboard_v3_model_performance.json  dashboards.yml  mlops_dashboard.json
monitoring/prometheus/: prometheus.yml
notebooks/: nyc_1.ipynb  nyc_2.ipynb  nyc_3.ipynb
pipeline/: .gitignore  flow.py  main.py  requirements.txt
pipeline/config/: config.py
pipeline/docs/: data_acquisition.md  data_preprocessing.md  feature_engineering.md  flow_and_orchestration.md  index.md  model_registry.md  model_training.md
pipeline/src/features/: feature_engineering.py
pipeline/src/models/: model_registry.py  model_training.py
shared/: feature_engineering.py
