[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "SAiRCAMP — hands-on MLOps course, Trip Duration Prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Data
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    # MLflow 3.x — required for @champion/@challenger alias registry
    "mlflow>=3.0.0",
    # Prefect 3.x orchestration
    "prefect>=3.0.0",
    # Notebooks
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Data sources
    "kagglehub>=0.2.0",
    # Utilities
    "joblib>=1.3.0",
    "sqlalchemy>=2.0.0",
    "prometheus-client>=0.24.1",
    "aiohttp>=3.14.1",
    "evidently>=0.7.21",
]
